* add readme * add multiple implementations of services * add cache for get requests * add rate limiting