@@ -23,7 +23,10 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-reflect")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-reactor")
+    implementation("io.seruco.encoding:base62:0.1.3")
+    implementation("org.hashids:hashids:1.0.3")
     implementation("commons-validator:commons-validator:1.7")
+    implementation("com.github.vladimir-bukhtoyarov:bucket4j-core:7.5.0")
     implementation("org.springdoc:springdoc-openapi-webflux-ui:1.6.9")
     implementation("it.ozimov:embedded-redis:0.7.3") { exclude(module = "slf4j-simple") }
     testImplementation("org.springframework.boot:spring-boot-starter-test")
@@ -41,9 +44,4 @@ tasks.withType<KotlinCompile> {
 
 tasks.withType<Test> {
     useJUnitPlatform()
-    /**
-     * Need this to make @SkykBean + Repository work on JDK 16+
-     * https://github.com/Ninja-Squad/springmockk/issues/65
-     */
-    jvmArgs = listOf("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
 }
